animations fixed, name-spacing is the next goal

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,10 +35,8 @@ main {
     color: white;
     margin: 0 auto;
     border: 3px solid #39FF14;
-    width: 85%;
-    max-width: 1400px;
-    background-image: src('.images/container-bg.jpg');
-    background-size: cover;
+    // width: 85%;
+    max-width: 1300px;
     button#play {
       width: 20%;
       position: absolute;
